# Patche

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: check.yml
docs/: mcp.md  note.md
note/: README.md
scripts/: diff_with_gnu_patch.py
src/Patche/commands/: apply.py
src/Patche/mcp/: server.py  tools.py
src/Patche/utils/: header.py  parse.py  resolve.py
src/ppatch/: app.py  config.py  model.py
src/ppatch/commands/: apply.py  auto.py  get.py  show.py  trace.py
src/ppatch/utils/: common.py  parse.py  resolve.py
tests/: test_apply.py  test_parse.py
