[project]
name = "Patche"
version = "0.0.1"
description = "Modern Patch in Python"
authors = [
    {name = "jingfelix", email = "jingfelix@outlook.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.2.1",
    "whatthepatch-pydantic==1.0.6a2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
patche = "Patche.__init__:app"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "viztracer>=0.16.3",
]
